deploy: ec677844408b273e43e57ba05d02ab7523e26d2c

--- a/_main.tex
+++ b/_main.tex
@@ -37,7 +37,7 @@
 \IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \hypersetup{
   pdftitle={A Mini Bookdown},
-  pdfauthor={Your Name},
+  pdfauthor={Nicola Cook},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 \urlstyle{same} % disable monospaced font for URLs
@@ -69,7 +69,7 @@
 \setcounter{secnumdepth}{5}
 
 \title{A Mini Bookdown}
-\author{Your Name}
+\author{Nicola Cook}
 \date{}
 
 \begin{document}
@@ -83,5 +83,10 @@
 \chapter{Create your open textbook}\label{create-your-open-textbook}}
 
 Hello!!
+
+\hypertarget{introduction}{%
+\chapter{Introduction}\label{introduction}}
+
+This chapter is an overview of the methods that we propose to solve an \textbf{important problem}.
 
 \end{document}
