deploy: a6431773966d9bc119c9fbea652797e7afb19559

--- a/_main.tex
+++ b/_main.tex
@@ -36,7 +36,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \hypersetup{
-  pdftitle={A Mini Bookdown},
+  pdftitle={A Mini Bookdown for WK3},
   pdfauthor={Nicola Cook},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
@@ -68,7 +68,7 @@
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 \setcounter{secnumdepth}{5}
 
-\title{A Mini Bookdown}
+\title{A Mini Bookdown for WK3}
 \author{Nicola Cook}
 \date{}
 
@@ -79,10 +79,10 @@
 \setcounter{tocdepth}{1}
 \tableofcontents
 }
-\hypertarget{create-your-open-textbook}{%
-\chapter{Create your open textbook}\label{create-your-open-textbook}}
+\hypertarget{preface}{%
+\chapter{Preface}\label{preface}}
 
-Hello!!
+In this book, we will introduce an interesting method.
 
 \hypertarget{introduction}{%
 \chapter{Introduction}\label{introduction}}
