--- a/_main.tex
+++ b/_main.tex
@@ -36,7 +36,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \hypersetup{
-  pdftitle={A Mini Bookdown for WK3},
+  pdftitle={A Mini Bookdown},
   pdfauthor={Nicola Cook},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
@@ -68,7 +68,7 @@
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 \setcounter{secnumdepth}{5}
 
-\title{A Mini Bookdown for WK3}
+\title{A Mini Bookdown}
 \author{Nicola Cook}
 \date{}
 
@@ -79,14 +79,9 @@
 \setcounter{tocdepth}{1}
 \tableofcontents
 }
-\hypertarget{preface}{%
-\chapter{Preface}\label{preface}}
+\hypertarget{create-your-open-textbook}{%
+\chapter{Create your open textbook}\label{create-your-open-textbook}}
 
-In this book, we will introduce an interesting method.
-
-\hypertarget{introduction}{%
-\chapter{Introduction}\label{introduction}}
-
-This chapter is an overview of the methods that we propose to solve an \textbf{important problem}.
+Hello!!
 
 \end{document}
