deploy: 476b535c72bdaf5e11ed674efb4cf054ec101c2d

--- a/_main.tex
+++ b/_main.tex
@@ -36,7 +36,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \hypersetup{
-  pdftitle={A Mini Bookdown},
+  pdftitle={A Mini Bookdown for WK3},
   pdfauthor={Nicola Cook},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
@@ -68,7 +68,7 @@
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 \setcounter{secnumdepth}{5}
 
-\title{A Mini Bookdown}
+\title{A Mini Bookdown for WK3}
 \author{Nicola Cook}
 \date{}
 
@@ -79,9 +79,46 @@
 \setcounter{tocdepth}{1}
 \tableofcontents
 }
-\hypertarget{create-your-open-textbook}{%
-\chapter{Create your open textbook}\label{create-your-open-textbook}}
+\hypertarget{preface}{%
+\chapter{Preface}\label{preface}}
 
-Hello!!
+In this book, we will introduce an interesting method.
+
+\hypertarget{introduction}{%
+\chapter{Introduction}\label{introduction}}
+
+This chapter is an overview of the methods that we propose to solve an \textbf{important problem}.
+
+\hypertarget{literature}{%
+\chapter{Literature}\label{literature}}
+
+Here is a literature review of existing methods.
+
+\hypertarget{methods}{%
+\chapter{Methods}\label{methods}}
+
+We describe our methods in this chapter.
+
+\hypertarget{applications}{%
+\chapter{Applications}\label{applications}}
+
+Some \emph{significant} applications are demonstrated
+in this chapter.
+
+\hypertarget{example-one}{%
+\section{Example one}\label{example-one}}
+
+\hypertarget{example-two}{%
+\section{Example two}\label{example-two}}
+
+\hypertarget{final-words}{%
+\chapter{Final Words}\label{final-words}}
+
+We have finished a nice book.
+
+\hypertarget{bibliography}{%
+\chapter{Bibliography}\label{bibliography}}
+
+This is where the references will go.
 
 \end{document}
